# rename

./: .gitignore  README.md  pyproject.toml
src/rename/: __init__.py
