[project]
name = "rename"
version = "0.1.0"
description = "Script for quickly renaming one or several files and directories using regular expressions"
readme = "README.md"
authors = [{ name = "g0di", email = "benoit.godard.p@gmail.com" }]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
rename = "rename:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.14.1", "ruff>=0.9.2"]
